# fastgemini

./: .gitignore  README.md  pyproject.toml
fastgemini/: __init__.py  app.py  enums.py  responses.py  router.py  schema.py  ssl.py
