[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fastgemini"
module-root = ""

[project]
name = "fastgemini"
version = "0.1.0"
description = "FastAPI-style Gemini Protocol Framework"
readme = "README.md"
requires-python = ">=3.14"
license-files = ["LICENSE"]
authors = [{ name = "Viktor Tereshchenko", email = "m0nochr0me@gmail.com" }]
dependencies = [
    "cffi>=2.0.0",
    "cryptography>=46.0.3",
    "pydantic>=2.12.5",
    "trio>=0.32.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["TC001", "TC002", "TC003", "E501", "C901"]
unfixable = ["TC"]
